# nlp-100

./: .gitignore  README.md  main.py  pyproject.toml
ch01/code/: 00.py  05.py  07.py  08.py
ch02/code/: 00.py  03.py  04.py  05.py  06.py
ch03/: README.md
ch03/code/: 20.py  21.py  24.py  25.py  26.py  27.py  28.py  29.py
ch04/: README.md  melos.txt
ch04/code/: 30.py  31.py  32.py  33.py  34.py  35.ipynb  36.py  37.py  38.py  39.py
ch05/: README.md  high_school_mathematics_ansD.csv
ch05/code/: 40.py  41.py  42.py  43ansD.py  43temp0.2.py  44.py  45.py  46.py  47.py  48.py  49.py  ans_switch.py
ch06/: README.md
ch06/code/: 50.py  51.py  52.py  53.py  54.py  55.py  56.py  57.py  58.py  59.py
ch07/: README.md
ch07/code/: 60.py  61.py  62.py  63.py  64.py  65.py  66.py  67.py  68.py  69.py
ch08/: README.md
ch08/code/: p70.py  p71.py  p72.py  p73.py  p74.py  p75.py  p76.py  p77.py  p78.py  p79.py
ch09/: README.md
ch09/code/: 80.py  81.py  82.py  83.py  84.py  85.py  86.py  87.py  88.py  89.py
ch10/code/: 90.py  91.py  92.py  93.py  94.py  95.py  96.py  97.py  98-suiron.py  98.py  99.py
cp01/code/: 01.py  02.py  03.py  04.py  06.py  09.py
cp02/: README.md
cp02/code/: 01.py  02.py  07.py  08.py  09.py
cp03/: README.md
cp03/code/: 20.py  21.py  22.py  23.py  24.py  25.py  26.py  27.py  28.py  29.py
