[project]
name = "100-knocks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fugashi>=1.5.2",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.7",
    "mecab-python3>=1.0.10",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "spacy>=3.8.11",
]
